--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,4 @@ pickle-email-*.html
 /config/environments/production.rb
 /config/*.yml
 /*.log
-
-#################  
-## npm
-#################
-
-npm-debug.log
-node_modules/
-!/node_modules/
-!src/node_modules/
+/node_modules
