--- a/package.json
+++ b/package.json
@@ -1,22 +1,36 @@
 {
-   "name":"GrandeDepart",
-   "description": "Track the Tour De France progess",
-   "version":"0.1.0",
-   "author": "Tom Bennett",
-   "devDependencies": {
-      "grunt":"~0.4.2",
-      "grunt-contrib-cssmin":"~0.6.1"
-   },
-  "dependencies" : {
-    "cron"   :  "1.0.x",
-    "express" :  "3.4.x",
-    "jade" :  "0.35.0",
-    "ntwitter"    :  "0.5.x",
-    "socket.io" :  "0.9.x",
-    "stylus"   :  "0.41.x",
-    "underscore" :  "1.5.x",
-    "googlemaps" :  "0.1.x",
-    "mongodb" :  "1.3.x"
+  "name": "GrandeDepart",
+  "version": "0.0.1",
+  "description": "Scrapes twitter for hashtags and displays on a map",
+  "main": "app.js",
+  "dependencies": {
+    "cron": "~1.0.1",
+    "express": "~3.4.7",
+    "googlemaps": "~0.1.9",
+    "jade": "~0.35.0",
+    "mongodb": "~1.3.23",
+    "ntwitter": "~0.5.0",
+    "socket.io": "~0.9.16",
+    "stylus": "~0.41.3",
+    "underscore": "~1.5.2",
+    "grunt": "~0.4.2",
+    "grunt-contrib-cssmin": "~0.6.2",
+    "mongojs": "~0.9.10"
   },
-  "scripts": {"start": "node app.js"}
+  "devDependencies": {},
+  "scripts": {
+    "test": "tester"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/tomblinksite/Node.git"
+  },
+  "keywords": [
+    "map"
+  ],
+  "author": "Tom Bennett",
+  "license": "BSD-2-Clause",
+  "bugs": {
+    "url": "https://github.com/tomblinksite/Node/issues"
+  }
 }
